@@ -1,6 +1,7 @@
 Revision history for Twitter::API
 
 {{$NEXT}}
+  - allow array ref for media_ids parameter to update
 
 0.0110  2017-02-08 15:59:31 PST
   - remove experimental status; ready for production
